#37 - [update/home] update HomePage based on planned workshop

--- a/index.html
+++ b/index.html
@@ -12,38 +12,40 @@
 <body>
 <header>
     <h1>Kotlin Workshop</h1>
-    <h2>by <span class="nowrap">Celine Heldner</span> </h2>
+    <h2>by <span class="nowrap">Abishek Anthony & Celine Heldner</span></h2>
 </header>
-
 <section>
-    <a href="slides/01_Basic_syntax.html" target="_blank">
-        <h2>Basic syntax</h2>
+    <a href="slides/00_Introduction.html" target="_blank">
+        <h2>Introduction</h2>
         <ul>
-            <li>Functions</li>
-            <li>Classes</li>
-            <li>Object</li>
-            <li>Properties and Fields</li>
+            <li>Getting to Know Each Other</li>
+            <li>Benefits of using Kotlin</li>
+            <li>Course structure</li>
         </ul>
     </a>
 </section>
 <section>
-    <a href="slides/02_Nullability.html" target="_blank">
-        <h2>Nullability</h2>
+    <a href="slides/01_Basic_syntax.html" target="_blank">
+        <h2>Basic syntax</h2>
         <ul>
-            <li>Nullable types</li>
-            <li>Handling nullability</li>
+            <li>Class / Object</li>
+            <li>Field / Property</li>
+            <li>Destruction / Delegation</li>
+            <li>Nullability / Mutability / Immutability</li>
+            <li>Function</li>
+            <li>Collection</li>
         </ul>
     </a>
 </section>
 <section>
     <a href="slides/03_Delegates.html" target="_blank">
-        <h2>Delegates</h2>
+        <h2>End-to-End Example</h2>
         <ul>
-            <li>Class Delegates</li>
-            <li>Property Delegates</li>
+            <li>JUNIT-Testing</li>
+            <li>Limitations with Java / Spring Boot</li>
+            <li>Code-Block</li>
         </ul>
     </a>
 </section>
-
 </body>
 </html>
