#37 - [restructure/slides] due to new structure of the workshop, the slides need to be restructured

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </a>
 </section>
 <section>
-    <a href="slides/03_Delegates.html" target="_blank">
+    <a href="slides/End_To_End_Example.html" target="_blank">
         <h2>End-to-End Example</h2>
         <ul>
             <li>JUNIT-Testing</li>
