internal - [restructure/code] restructure code for better navigation & readability

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>by <span class="nowrap">Abishek Anthony & Celine Heldner</span></h2>
 </header>
 <section>
-    <a href="slides/00_Introduction.html" target="_blank">
+    <a href="slides/introduction/index.html" target="_blank">
         <h2>Introduction</h2>
         <ul>
             <li>Getting to Know Each Other</li>
@@ -25,7 +25,7 @@
     </a>
 </section>
 <section>
-    <a href="slides/01_Basic_syntax.html" target="_blank">
+    <a href="slides/basicsyntax/index.html" target="_blank">
         <h2>Basic syntax</h2>
         <ul>
             <li>Class / Object</li>
@@ -38,7 +38,7 @@
     </a>
 </section>
 <section>
-    <a href="slides/End_To_End_Example.html" target="_blank">
+    <a href="slides/endtoend/index.html" target="_blank">
         <h2>End-to-End Example</h2>
         <ul>
             <li>JUNIT-Testing</li>
