--- a/slides/introduction/index.html
+++ b/slides/introduction/index.html
@@ -6,12 +6,12 @@
 
     <title>Introduction</title>
 
-    <link rel="icon" href="../img/zuehlke_logo.jpg">
-    <link rel="stylesheet" href="../css/reveal.css">
-    <link rel="stylesheet" href="../css/theme/zuehlke.css">
+    <link rel="icon" href="../../img/zuehlke_logo.jpg">
+    <link rel="stylesheet" href="../../css/reveal.css">
+    <link rel="stylesheet" href="../../css/theme/zuehlke.css">
 
     <!-- Theme used for syntax highlighting of code -->
-    <link rel="stylesheet" href="../lib/css/atom-one-dark.css">
+    <link rel="stylesheet" href="../../lib/css/atom-one-dark.css">
 
     <!-- Printing and PDF exports -->
     <script>
@@ -69,8 +69,8 @@
     </div>
 </div>
 
-<script src="../lib/js/head.min.js"></script>
-<script src="../js/reveal.js"></script>
+<script src="../../lib/js/head.min.js"></script>
+<script src="../../js/reveal.js"></script>
 
 <script>
     // More info https://github.com/hakimel/reveal.js#configuration
