#37 - [restructure] restructure content and update!

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
         <ul>
             <li>Class / Object</li>
             <li>Field / Property</li>
-            <li>Destruction / Delegation</li>
+            <li>Delegation</li>
             <li>Nullability / Mutability / Immutability</li>
             <li>Function</li>
             <li>Collection</li>
+            <li>Destructuring</li>
         </ul>
     </a>
 </section>
