--- a/slides/basicsyntax/basicsyntax.html
+++ b/slides/basicsyntax/basicsyntax.html
@@ -27,14 +27,23 @@
     <div class="slides">
         <section class="deck-slide">
             <h1>Basic syntax</h1>
+            <ul>
+                <li>Class / Object</li>
+                <li>Properties / Fields</li>
+                <li>Nullability / Mutability</li>
+                <li>Functions / Coercion</li>
+                <li>Advanced / Concepts</li>
+            </ul>
         </section>
         <section data-external="class.html" class="deck-slide"></section>
         <section data-external="object.html" class="deck-slide"></section>
-        <section data-external="destruction_delegation.html" class="deck-slide"></section>
         <section data-external="field_property.html" class="deck-slide"></section>
         <section data-external="bility.html" class="deck-slide"></section>
         <section data-external="function.html" class="deck-slide"></section>
+        <section data-external="coercion.html" class="deck-slide"></section>
+        <section data-external="delegation.html" class="deck-slide"></section>
         <section data-external="collection.html" class="deck-slide"></section>
+        <section data-external="destructuring.html" class="deck-slide"></section>
     </div>
 </div>
 
