--- a/slides/basicsyntax/basicsyntax.html
+++ b/slides/basicsyntax/basicsyntax.html
@@ -31,7 +31,7 @@
         <section data-external="class.html" class="deck-slide"></section>
         <section data-external="object.html" class="deck-slide"></section>
         <section data-external="field_property.html" class="deck-slide"></section>
-        <section data-external="bility.html" class="deck-slide"></section>
+        <section data-external="nullability.html" class="deck-slide"></section>
         <section data-external="function.html" class="deck-slide"></section>
         <section data-external="coercion.html" class="deck-slide"></section>
         <section data-external="delegation.html" class="deck-slide"></section>
