--- a/slides/basicsyntax/topic/collection.html
+++ b/slides/basicsyntax/topic/collection.html
@@ -1,27 +1,31 @@
 <section class="white">
     <h3>Collection</h3>
+</section>
+<section class="white">
     <h4>List</h4>
     <pre><code class="kotlin" data-trim>
 listOf(2, 3)
 mutableListOf&lt;Int&gt;()
     </code></pre>
-
+</section>
+<section class="white">
     <h4>Set</h4>
     <pre><code class="kotlin" data-trim>
 setOf(2, 3)
 mutableSetOf&lt;Int&gt;()
     </code></pre>
-
+</section>
+<section class="white">
     <h4>Map</h4>
     <pre><code class="kotlin" data-trim>
 mapOf("Hello" to "Hallo", "Bye" to "Tschüss")
 mutableMapOf&lt;String, String&gt;()
     </code></pre>
 </section>
-
 <section class="white">
     <h3>Useful Functions on Collections</h3>
-
+</section>
+<section class="white">
     <h4>forEach { ... }</h4>
     <pre><code class="kotlin" data-trim>
 val numbers = listOf("one", "two", "three", "four")
@@ -29,14 +33,16 @@ numbers.forEach {
     println(it)
 }
     </code></pre>
-
+</section>
+<section class="white">
     <h4>map { ... }</h4>
     <pre><code class="kotlin" data-trim>
 val numbers = setOf(1, 2, 3)
 println(numbers.map { it * 3 })
 // prints 3, 6, 9
     </code></pre>
-
+</section>
+<section class="white">
     <h4>filter { ... }</h4>
     <pre><code class="kotlin" data-trim>
 val numbers = listOf("one", "two", "three", "four")
