--- a/slides/basicsyntax/basicsyntax.html
+++ b/slides/basicsyntax/basicsyntax.html
@@ -28,13 +28,13 @@
         <section class="deck-slide">
             <h1>Basic syntax</h1>
         </section>
-        <section data-external="class.html" class="deck-slide"></section>
+        <section data-external="class.html" class="deck-slide"></section> <!--  Task 1, 2, 3  -->
         <section data-external="object.html" class="deck-slide"></section>
-        <section data-external="field_property.html" class="deck-slide"></section>
+        <section data-external="field_property.html" class="deck-slide"></section> <!--  Bonus 1, 2 -->
         <section data-external="nullability.html" class="deck-slide"></section>
         <section data-external="function.html" class="deck-slide"></section>
         <section data-external="coercion.html" class="deck-slide"></section>
-        <section data-external="delegation.html" class="deck-slide"></section>
+        <section data-external="delegation.html" class="deck-slide"></section> <!--  Task 4  -->
         <section data-external="collection.html" class="deck-slide"></section>
         <section data-external="destructuring.html" class="deck-slide"></section>
     </div>
