--- a/slides/basicsyntax/topic/field_property.html
+++ b/slides/basicsyntax/topic/field_property.html
@@ -20,7 +20,7 @@
     <pre>
         <code class="kotlin" data-trim>
 class Person {
-    var firstname: String = "Celine" // mutable property
+    val firstname: String = "Celine" // immutable property
     var lastname: String = "Heldner" // mutable property
 }
 
@@ -50,4 +50,18 @@ var name: String = "Celine"
     private set
         </code>
     </pre>
+</section>
+<section class="white">
+    <h3>Bonus</h3>
+    <h4>1) Add a read-only property `name` that combines firstname and lastname</h4>
+    <ul>
+        <li>What changes are required on the base Object</li>
+        <li>What is your strategy to provide the information</li>
+    </ul>
+    <h4>2) Adjust the name property so that it can only be set with non-empty values.</h4>
+    <ul>
+        <li>If an attempt is made to retrieve the name when it is empty, it should return the first name and last name
+            instead.
+        </li>
+    </ul>
 </section>
