--- a/slides/introduction/topic/coursestructure.html
+++ b/slides/introduction/topic/coursestructure.html
@@ -1,6 +1,14 @@
 <h2>Course structure</h2>
+<h5>General</h5>
 <ul>
-    <li>Hands-on examples with each topic</li>
     <li>Open Q&A / ask anytime</li>
     <li>Collaborative learning approach</li>
+</ul>
+<h5>Morning</h5>
+<ul>
+    <li>Hands-on examples with each topic</li>
+</ul>
+<h5>Afternoon</h5>
+<ul>
+    <li>Hands-on with spring boot Kotlin</li>
 </ul>
