--- a/slides/basicsyntax/topic/class.html
+++ b/slides/basicsyntax/topic/class.html
@@ -1,82 +1,91 @@
 <script src="../../js/initialize.js"></script>
+
 <section class="white"><h3>Class</h3></section>
+
 <!------------------------------------------------------>
-<!------------------------------------------------------>
-<!------------------------------------------------------>
-<!--Normal Class-->
-<!------------------------------------------------------>
-<!------------------------------------------------------>
+<!-- Normal Class -->
 <!------------------------------------------------------>
 <section class="white">
-    <h3>Normal class</h3>
-    <pre>
-        <code class="kotlin" data-trim>
+    <h3>Normal Class</h3>
+    <pre><code class="kotlin" data-trim>
 class Test
 
 class Test constructor(variable: Any)
 
 class Test constructor(variable: Any) {
-    init{
+    init {
         val instanceVariable = variable
     }
 }
 
 class Person(val name: String, val hasSalary: Boolean) {
     constructor(employee: Employee) : this(employee.name, true)
-    constructor() : this("",false)
+    constructor() : this("", false)
 }
-        </code>
-    </pre>
+    </code></pre>
     <aside class="notes">
         <p>
-            A) This defines a class named Test with no properties or methods.
-
-            B) This class has a primary constructor that takes a single parameter of type Any. The constructor keyword
-            is
-            optional here.
-
-            C) This class also has a primary constructor and an init block that initialize a local variable
-            (instanceVariable) with the constructor's parameter. The init block runs every time an instance of the class
-            is
-            created.
-
-            D) This class has a primary constructor that takes two parameters: name (of type String) and hasSalary (of
-            type Boolean).
-            It has two secondary constructors:
-            One that takes an Employee object and initializes the name with employee.name and sets hasSalary to true.
-            A default constructor that initializes name to an empty string and hasSalary to false.
+            <strong>Default Constructor:</strong> A default constructor requires no parameters. In Kotlin, a class
+            defined with no constructors has a default constructor that initializes an empty object, e.g., <code>class
+            Test</code>.
+        </p>
+        <p>
+            <strong>Primary Constructor:</strong> The primary constructor is part of the class header and is optional.
+            It can be written with or without the <code>constructor</code> keyword, e.g., <code>class Test
+            constructor(variable: Any)</code>.
+        </p>
+        <p>
+            <strong>Secondary Constructor:</strong> A secondary constructor is defined within the class body and is
+            prefixed by <code>constructor</code>. It must delegate to the primary constructor or another secondary
+            constructor.
+        </p>
+        <p>
+            <strong>Property Initializers:</strong> Properties initialized directly in the class body are executed
+            first, evaluated in the order defined.
+        </p>
+        <p>
+            <strong>init Blocks:</strong> Each <code>init</code> block is executed in the order it appears in the class
+            body, typically used for initialization requiring access to parameters or properties.
+        </p>
+        <p>
+            <strong>Constructor with Initialization (init):</strong> An <code>init</code> block runs as part of the
+            primary constructor when an instance is created, initializing <code>instanceVariable</code> with the
+            parameter.
+        </p>
+        <p>
+            <strong>Secondary Constructors:</strong> When invoked, a secondary constructor first delegates to the
+            primary constructor and then executes its body.
+        </p>
+        <p>
+            This demonstrates how constructors provide flexibility in initializing class instances based on specific
+            requirements.
         </p>
     </aside>
 </section>
+
 <!------------------------------------------------------>
-<!------------------------------------------------------>
-<!------------------------------------------------------>
-<!--Data Class-->
-<!------------------------------------------------------>
-<!------------------------------------------------------>
+<!-- Data Class -->
 <!------------------------------------------------------>
 <section class="white">
-    <h3>Data class</h3>
-    <pre>
-        <code class="kotlin" data-trim>
+    <h3>Data Class</h3>
+    <pre><code class="kotlin" data-trim>
 data class User(val name: String, val age: Int)
 
 val chris = User("Chris", 36)
 val copy = chris.copy(age = 21)
-println(copy.equals(chris)) //prints false
-        </code>
-    </pre>
+println(copy.equals(chris)) // prints false
+    </code></pre>
     <aside class="notes">
         <p>
-            Kotlin generates automatically: getters, setters, toString, hashCode, equals, copy
+            Kotlin automatically generates: getters, setters, toString, hashCode, equals, and copy methods for data
+            classes.
         </p>
     </aside>
 </section>
+
 <section class="white">
     <h3>Task 1</h3>
-    <h4>
-        Create a User that contains the following properties:
-    </h4>
+    <h4>Create a User that contains the following properties:</h4>
     <ul>
         <li>Int id</li>
         <li>String name</li>
@@ -84,17 +93,13 @@ println(copy.equals(chris)) //prints false
         <li>Boolean (default to true) isActive</li>
     </ul>
 </section>
+
 <!------------------------------------------------------>
-<!------------------------------------------------------>
-<!------------------------------------------------------>
-<!--Enum-->
-<!------------------------------------------------------>
-<!------------------------------------------------------>
+<!-- Enum -->
 <!------------------------------------------------------>
 <section class="white">
     <h3>Enum</h3>
-    <pre>
-        <code class="kotlin" data-trim>
+    <pre><code class="kotlin" data-trim>
 enum class ViewState {
    ERROR,
    DATA,
@@ -106,100 +111,92 @@ enum class State {
    `USER IS AN HACKER`,
    `USER IS A GUEST USER`
 }
-        </code>
-    </pre>
+    </code></pre>
+    <aside class="notes">
+        <p>
+            Backticks can be used to enumerate phrases or when using keywords from Kotlin in other contexts (e.g.,
+            libraries like Mockito).
+        </p>
+    </aside>
 </section>
+
 <!------------------------------------------------------>
-<!------------------------------------------------------>
-<!------------------------------------------------------>
-<!--Sealed Class-->
-<!------------------------------------------------------>
-<!------------------------------------------------------>
+<!-- Sealed Class -->
 <!------------------------------------------------------>
 <section class="white">
-    <h3>Sealed classes</h3>
-    <pre>
-        <code class="kotlin" data-trim>
+    <h3>Sealed Classes</h3>
+    <pre><code class="kotlin" data-trim>
 sealed class ViewState {
-    data object Error: ViewState()
-    data object Loading: ViewState()
+    object Error : ViewState()
+    object Loading : ViewState()
     data class Data(val someData: SomeData) : ViewState()
 }
 
-fun handleViewState(viewState: ViewState): Unit = when(viewState){
-    is ViewState.Error -> { /* show error screen */ }
-    is ViewState.Loading -> { /* show loading indicator */ }
-    is ViewState.Data -> { handleData(viewState.someData)}
+fun handleViewState(viewState: ViewState) {
+    when(viewState) {
+        is ViewState.Error -> { /* show error screen */ }
+        is ViewState.Loading -> { /* show loading indicator */ }
+        is ViewState.Data -> { handleData(viewState.someData) }
+    }
 }
-        </code>
-    </pre>
+    </code></pre>
     <aside class="notes">
         <p>
-            Sealed classes are an extension of enums, they can contain state.
-            A Sealed classes can group any type declaration: class, object
+            Sealed classes extend enums and can contain state. They allow grouping of any type declaration: class or
+            object.
         </p>
-        <p>Is usually useful in combination with "when"</p>
+        <p>They are often useful in combination with "when".</p>
     </aside>
 </section>
+
 <section class="white">
     <h3>Task 2</h3>
-    <h4>
-        Define UserState's:
-    </h4>
+    <h4>Define UserState's:</h4>
     <ul>
         <li>Active</li>
         <li>Inactive</li>
         <li>Suspended</li>
     </ul>
 </section>
+
 <!------------------------------------------------------>
-<!------------------------------------------------------>
-<!------------------------------------------------------>
-<!--Open Class-->
-<!------------------------------------------------------>
-<!------------------------------------------------------>
+<!-- Open Class -->
 <!------------------------------------------------------>
 <section class="white">
-    <h3>Open class</h3>
-    <pre>
-        <code class="kotlin" data-trim>
-open class Base () {
+    <h3>Open Class</h3>
+    <pre><code class="kotlin" data-trim>
+open class Base {
     open fun a() {}
     open val c: Int = 1
     fun b() {}
 }
 
-class Derived : Base(){
+class Derived : Base() {
     final override fun a() {}
     override val c = 3
 }
-        </code>
-    </pre>
+    </code></pre>
     <aside class="notes">
         <p>
-            In order to inherit from a class it needs to be open ("open" keyword)
-            To override a function from the parent the function in the parent also needs to be declared
-            "open"
+            In Kotlin, classes are final by default, unlike Java. To inherit from a class, it needs to be marked with
+            the <code>open</code> keyword. To override a method, it must also be declared <code>open</code> in the
+            parent class.
         </p>
         <p>
-            An overridden function is itself is still open. If you want to prohibit this, use final
+            An overridden method can still be open. To prevent further overrides, use <code>final</code>.
         </p>
         <p>
-            val basically defines a getter and a setter, so it can be overridden
+            <code>val</code> defines a getter and a setter, allowing it to be overridden.
         </p>
     </aside>
 </section>
+
 <!------------------------------------------------------>
-<!------------------------------------------------------>
-<!------------------------------------------------------>
-<!--Abstract Class-->
-<!------------------------------------------------------>
-<!------------------------------------------------------>
+<!-- Abstract Class -->
 <!------------------------------------------------------>
 <section class="white">
-    <h3>Abstract class</h3>
-    <pre>
-        <code class="kotlin" data-trim>
+    <h3>Abstract Class</h3>
+    <pre><code class="kotlin" data-trim>
 abstract class Base {
     abstract fun a()
     open val c: Int = 1
@@ -222,30 +219,25 @@ class SubDerived : Derived() {
 }
 
 fun main() {
-    val subDerived = SubDerived();
+    val subDerived = SubDerived()
     subDerived.a()
 }
-        </code>
-    </pre>
+    </code></pre>
     <aside class="notes">
         <p>
-            To inherit from an abstract class, it must be marked with the "abstract" keyword.
-            Abstract methods and members must be implemented by subclasses.
-            Open properties or methods provide a default implementation that can be overridden.
+            To inherit from an abstract class, it must be marked with the <code>abstract</code> keyword. Abstract
+            methods must be implemented by subclasses. Open properties or methods provide default implementations that
+            can be overridden.
         </p>
     </aside>
 </section>
+
 <!------------------------------------------------------>
-<!------------------------------------------------------>
-<!------------------------------------------------------>
-<!--Interface Class-->
-<!------------------------------------------------------>
-<!------------------------------------------------------>
+<!-- Interface Class -->
 <!------------------------------------------------------>
 <section class="white">
     <h3>Interface</h3>
-    <pre>
-        <code class="kotlin" data-trim>
+    <pre><code class="kotlin" data-trim>
 interface Base {
     fun a()
     val c: Int
@@ -258,14 +250,15 @@ class Derived : Base {
 
     override val c: Int = 42
 }
-        </code>
-    </pre>
+    </code></pre>
     <aside class="notes">
         <p>
-            methods and members must be implemented by subclasses
+            Methods and properties must be implemented by implementing classes. In Java, variables cannot be defined in
+            interfaces.
         </p>
     </aside>
 </section>
+
 <section class="white">
     <h3>Task 3</h3>
     <h4>Create `AdminUser` and `GuestUser` classes with:</h4>
