--- a/slides/endtoend/endtoend.html
+++ b/slides/endtoend/endtoend.html
@@ -26,8 +26,11 @@
 <div class="reveal">
     <div class="slides">
         <section class="deck-slide">
-            <h1>End-to-End Example</h1>
+            <h1>Kotlin Spring Boot</h1>
         </section>
+        <section data-external="springbootexercises.html" class="deck-slide"></section>
+        <section data-external="testing.html" class="deck-slide"></section>
+        <section data-external="resources.html" class="deck-slide"></section>
     </div>
 </div>
 
