Add Spring Boot slides

--- a/slides/endtoend/endtoend.html
+++ b/slides/endtoend/endtoend.html
@@ -29,8 +29,8 @@
             <h1>Kotlin Spring Boot</h1>
         </section>
         <section data-external="springbootexercises.html" class="deck-slide"></section>
-        <section data-external="testing.html" class="deck-slide"></section>
-        <section data-external="resources.html" class="deck-slide"></section>
+        <section data-external="testlibraries.html" class="deck-slide"></section>
+        <section data-external="lambdafordsl.html" class="deck-slide"></section>
     </div>
 </div>
 
