--- a/slides/endtoend/topic/springbootexercises.html
+++ b/slides/endtoend/topic/springbootexercises.html
@@ -6,17 +6,16 @@
         <li>Spring Boot initializr in Intellij</li>
         <li>Select "Kotlin" and "Gradle-Kotlin" ;-)</li>
     </ul>
-    <img src="/img/kotlin/spring_boot_init.png" />
+    <img src="../../../img/kotlin/spring_boot_init.png" />
 </section>
 
 <section class="white">
     <h3>Spring Boot Exercise Start</h3>
     <p>We will build a Spring Boot Application, that provides a REST API for a News Service</p>
-    <ol>
+    <ul>
         <li>Clone the repo <a href?="https://github.com/KotlinworkshopZuhlke/kotlinnewsservice"><b>https://github.com/KotlinworkshopZuhlke/kotlinnewsservice</b></a></li>
         <li>Check out branch "exercise/1_modelcreation"</li>
         <li>Find all the "TODO"s</li>
         <li>Start with "TODO Step 1" then "Todo Step 2" ...</li>
-    </ol>
-    <img src="/img/kotlin/github_url.png" />
+    </ul>
 </section>
