adapt endtoend slides

--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
     <a href="slides/endtoend/endtoend.html" target="_blank">
         <h2>End-to-End Example</h2>
         <ul>
-            <li>JUNIT-Testing</li>
-            <li>Limitations with Java / Spring Boot</li>
-            <li>Code-Block</li>
+            <li>Spring Boot Hands on</li>
+            <li>Testing</li>
+            <li>JPA</li>
+            <li>Your own DSL</li>
         </ul>
     </a>
 </section>
