--- a/slides/endtoend/endtoend.html
+++ b/slides/endtoend/endtoend.html
@@ -30,6 +30,7 @@
         </section>
         <section data-external="springbootexercises.html" class="deck-slide"></section>
         <section data-external="testlibraries.html" class="deck-slide"></section>
+        <section data-external="jpa.html" class="deck-slide"></section>
         <section data-external="lambdafordsl.html" class="deck-slide"></section>
     </div>
 </div>
