adjust overview slide structure

--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
     <a href="slides/basicsyntax/basicsyntax.html" target="_blank">
         <h2>Basic syntax</h2>
         <ul>
-            <li>Class / Object</li>
-            <li>Field / Property</li>
-            <li>Delegation</li>
-            <li>Nullability / Mutability / Immutability</li>
-            <li>Function</li>
-            <li>Collection</li>
-            <li>Destructuring</li>
+            <li>Class / Object</li> <!-- Presenter: Abishek -->
+            <li>Field / Property</li>  <!-- Presenter: Céline -->
+            <li>Nullability / Mutability / Immutability</li>  <!-- Presenter: Abishek -->
+            <li>Function</li>  <!-- Presenter: Céline -->
+            <li>Coercion</li>  <!-- Presenter: Abishek -->
+            <li>Delegation</li>  <!-- Presenter: Céline -->
+            <li>Collection</li>  <!-- Presenter: Abishek -->
+            <li>Destructuring</li>  <!-- Presenter: Céline -->
         </ul>
     </a>
 </section>
