change order of presentation function, collection, delegation, destruction

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <li>Field / Property</li>  <!-- Presenter: Céline -->
             <li>Nullability / Mutability / Immutability</li>  <!-- Presenter: Abishek -->
             <li>Function</li>  <!-- Presenter: Céline -->
-            <li>Coercion</li>  <!-- Presenter: Abishek -->
-            <li>Delegation</li>  <!-- Presenter: Céline -->
             <li>Collection</li>  <!-- Presenter: Abishek -->
-            <li>Destructuring</li>  <!-- Presenter: Céline -->
+            <li>Coercion</li>  <!-- Presenter: Abishek -->
+            <li>Delegation</li>  <!-- Presenter: Abishek -->
+            <li>Destructuring</li>  <!-- Presenter: Abishek -->
         </ul>
     </a>
 </section>
