--- a/slides/basicsyntax/topic/object.html
+++ b/slides/basicsyntax/topic/object.html
@@ -14,53 +14,17 @@ object Payroll {
     val allUsers = arrayListOf&ltUser&gt()
 
     fun calculateTotalSalaryOverUsers() {
-        for (user in allUsers) {...}
+        allUsers.forEach {...}
     }
 }
         </code>
     </pre>
     <aside class="notes">
         <p>
-            In Kotlin, an object declaration creates a singleton, which means there's only one instance of that class.
-            This is useful for managing shared state or behavior without needing to create multiple instances.
+            static keyword not required especially for fields and methods. with <b>object</b>-keyword everything is static in that context.
         </p>
         <p>
-            object Payroll: Defines a singleton named Payroll.
-            allUsers: A mutable list that can store multiple User instances.
-            calculateTotalSalaryOverUsers: A function that iterates through allUsers to perform salary calculations.
-        </p>
-    </aside>
-</section>
-<!------------------------------------------------------>
-<!------------------------------------------------------>
-<!------------------------------------------------------>
-<!--Anonymus inner class-->
-<!------------------------------------------------------>
-<!------------------------------------------------------>
-<!------------------------------------------------------>
-<section class="white">
-    <h3>Anonymus inner class</h3>
-    <pre>
-        <code class="kotlin" data-trim>
-object IgnoreCaseFileComparator : Comparator&ltFile&gt {
-    override fun compare(file1: File, file2: File): Int {
-        return file1.path.compareTo(file2.path, ignoreCase = true)
-    }
-}
-
-val files = listOf(File("/Z"), File("/a"))
-println(files.sortedWith(IgnoreCaseFileComparator))
-        </code>
-    </pre>
-    <aside class="notes">
-        <p>
-            An anonymous inner class is a class without a name that is defined at the point of instantiation.
-            It is often used to implement interfaces or extend classes on the fly.
-        </p>
-        <p>
-            object IgnoreCaseFileComparator: An anonymous inner class implementing Comparator&ltFile&gt.
-            compare function: Provides a way to compare two File objects by their paths, ignoring case differences.
-            sortedWith: Sorts a list of File objects using the custom comparator defined above.
+            Java is not Thread-safe for static methods, where Kotlin is.
         </p>
     </aside>
 </section>
@@ -96,6 +60,39 @@ fun main() {
         <p>
             companion object: Defines a companion object within class A.
             bar function: A static-like method that can be called without an instance of A.
+        </p>
+    </aside>
+</section>
+<!------------------------------------------------------>
+<!------------------------------------------------------>
+<!------------------------------------------------------>
+<!--Anonymus inner class-->
+<!------------------------------------------------------>
+<!------------------------------------------------------>
+<!------------------------------------------------------>
+<section class="white">
+    <h3>Anonymus inner class</h3>
+    <pre>
+        <code class="kotlin" data-trim>
+object IgnoreCaseFileComparator : Comparator&ltFile&gt {
+    override fun compare(file1: File, file2: File): Int {
+        return file1.path.compareTo(file2.path, ignoreCase = true)
+    }
+}
+
+val files = listOf(File("/Z"), File("/a"))
+println(files.sortedWith(IgnoreCaseFileComparator))
+        </code>
+    </pre>
+    <aside class="notes">
+        <p>
+            An anonymous inner class is a class without a name that is defined at the point of instantiation.
+            It is often used to implement interfaces or extend classes on the fly.
+        </p>
+        <p>
+            object IgnoreCaseFileComparator: An anonymous inner class implementing Comparator&ltFile&gt.
+            compare function: Provides a way to compare two File objects by their paths, ignoring case differences.
+            sortedWith: Sorts a list of File objects using the custom comparator defined above.
         </p>
     </aside>
 </section>
